# PORTFOLIO-SITE

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  DJANGO_TO_NEXTJS_MIGRATION.md  Makefile  OPTIMIZATION_ROADMAP.md  SETUP_GUIDE.md  eslint.config.mjs  extracted-colors.json  infos.md  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-django.txt  requirements-prod.txt  requirements.txt  roadmap.md  sanity.cli.ts  sanity.config.ts  tailwind.config.ts  to do.md  tsconfig.json  vercel.json  vite.config.js
.github/instructions/: instructor.instructions.md
.github/workflows/: template-performance.yml
apps/ai_optimizer/migrations/: 0001_initial.py
apps/blog/: api_urls.py  api_views.py
apps/blog/migrations/: 0001_initial.py  0002_initial.py
apps/chat/: api_urls.py  api_views.py
apps/contact/: api_urls.py  api_views.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/core/: admin_urls.py  admin_views.py  feature_flags.py
apps/core/templatetags/: feature_flags.py
apps/main/: cache.py  ratelimit.py
apps/main/middleware/: cache_security.py
apps/main/migrations/: 0001_initial.py
apps/playground/migrations/: 0001_initial.py
apps/portfolio/: admin.py  api_urls.py  fulltext_search.py  urls.py
apps/portfolio/management/commands/: start_flower.py
apps/portfolio/middleware/: security_headers.py
apps/portfolio/migrations/: 0001_initial.py
apps/portfolio/views/: __init__.py  htmx_views.py  search_api.py
apps/tools/: api_urls.py  api_views.py
apps/tools/migrations/: 0001_initial.py
archive/: roadmap.txt
archive/microservices/push-notification-service/: requirements.txt
docs/: DESIGN_GUIDE.md  IMAGE_OPTIMIZATION_FIXES.md
nextjs-app/: .env.example  .eslintrc.json  .gitignore  API_TESTING.md  GO_LIVE_CHECKLIST.md  README.md  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-api-list.ts  tsconfig.json  vercel.json
nextjs-app/src/: sw.ts
nextjs-app/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx  robots.ts
nextjs-app/src/app/blog/: page.tsx
nextjs-app/src/app/contact/: page.tsx
nextjs-app/src/components/analytics/: GoogleAnalytics.tsx  VercelAnalytics.tsx  index.ts
nextjs-app/src/components/blog/: BlogCard.tsx
nextjs-app/src/components/layout/: Footer.tsx  Header.tsx  index.ts
nextjs-app/src/components/portable-text/: PortableTextRenderer.tsx
nextjs-app/src/components/projects/: ProjectCard.tsx
nextjs-app/src/lib/: auth.ts  constants.ts  revalidation.ts  utils.ts
nextjs-app/src/lib/api/: client.ts  index.ts
nextjs-app/src/lib/data/: settings.ts
nextjs-app/src/providers/: ThemeProvider.tsx
nextjs-app/src/sanity/: client.ts  index.ts
nextjs-app/src/sanity/schemas/: author.ts  index.ts  page.ts  project.ts  siteSettings.ts
nextjs-app/src/styles/: globals.css
portfolio/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
portfolio_site/settings/: __init__.py
project/: manage_data.py  requirements.txt  reset_admin_password.py  update_personal_data.py  update_personal_info.py  urls.py  urls_api_only.py
project/settings/: __init__.py  api_only.py  base.py  development.py  simple.py
project/static/css/: modern-design.css  output.css  typography.css
project/static/js/: micro-interactions.js
project/templates/admin/: base_site.html
project/templates/admin/modern/: profile.html  seo.html
public/: manifest.json  robots.txt
requirements/: base.txt  development.txt  production.txt  security.txt  testing.txt
scripts/: analyze_complexity.py  manage_simple.py  optimize_images.py
scripts/maintenance/: manage_data.py  reset_admin_password.py  test_query_performance.py  test_security_verification.py  test_server.py  validate_before_run.py  verify_security.py
src/: main.tsx  middleware.ts  sw.ts
src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/app/api/analytics/: route.ts
src/app/api/chat/: route.ts
src/app/api/comments/: route.ts
src/app/api/contact/: route.ts
src/app/api/revalidate/: route.ts
src/app/api/search/: route.ts
src/app/blog/: page.tsx
src/app/blog/[slug]/: page.tsx
src/app/contact/: layout.tsx  page.tsx
src/app/offline/: page.tsx
src/app/projects/: page.tsx
src/app/studio/: page.tsx
src/components/animations/: MotionComponents.tsx  PageTransition.tsx  Skeleton.tsx  index.ts
src/components/blog/: BlogCard.tsx
src/components/comments/: BlogComments.tsx  index.ts
src/components/i18n/: LanguageToggle.tsx
src/components/layout/: Footer.tsx  Header.tsx  ThemeToggle.tsx
src/components/navigation/: SmartScrollOutline.tsx  index.ts
src/components/notifications/: NotificationProvider.tsx
src/components/portable-text/: PortableTextRenderer.tsx
src/components/projects/: ProjectCard.tsx
src/components/pwa/: PWAInstallPrompt.tsx  PWAUpdatePrompt.tsx  index.ts
src/components/search/: SearchCommand.tsx
src/i18n/: config.ts  request.ts
src/i18n/messages/: en.json  tr.json
src/lib/data/: blog.ts  index.ts  projects.ts
src/sanity/: client.ts  env.ts  queries.ts  schema.ts  structure.ts
src/sanity/components/: Dashboard.tsx
src/sanity/lib/: image.ts
src/sanity/schemaTypes/: index.ts
src/sanity/schemas/: author.ts  blockContent.ts  category.ts  contactMessage.ts  index.ts  localization.ts  post.ts  project.ts  siteSettings.ts
src/styles/: globals.css
src/types/: index.ts
static/admin/css/: login.css
templates/admin/: login.html
templates/base/: base.html
templates/components/effects/: aurora_background.html
templates/components/loading/: skeleton_card.html  skeleton_grid.html
templates/components/portfolio/: bento_grid.html  project_card_htmx.html
tests/e2e/: main.spec.ts  smoke.spec.js  test_templates.spec.js
tests/performance/: test_comprehensive_performance.py
tests/templates/: __init__.py  test_template_performance.py  test_template_validation.py
tests/unit/: test_advanced_features.py
(+26 files in other folders)
