# =============================================================================
# PYPROJECT.TOML - Modern Python Proje Konfigürasyonu
# =============================================================================
# Bu dosya tüm Python araç konfigürasyonlarını tek bir yerde toplar.
# uv paket yöneticisi ile kullanılmak üzere optimize edilmiştir.
# =============================================================================

[project]
name = "portfolio-site"
version = "2.0.0"
description = "Modern Django Portfolio Site with HTMX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Bugra", email = "bugra@example.com" }
]
keywords = ["django", "portfolio", "htmx", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# =============================================================================
# DEPENDENCIES - Core Runtime
# =============================================================================
dependencies = [
    "Django>=6.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.11.0",
    "Pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "django-filter>=25.2",
    "django-ratelimit>=4.1.0",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "python-decouple>=3.8",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "flower>=2.0.1",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "sentry-sdk[django]>=2.49.0",
    # Content Management
    "bleach>=6.3.0",
    "markdown>=3.10",
    "django-tinymce>=5.0.0",
    # Search & Features
    "meilisearch>=0.38.0",
    "pyotp>=2.9.0",
    "pywebpush>=2.2.0",
    "qrcode>=8.2",
    # Feature Flags
    "django-waffle>=4.1.0",
    # HTMX Support
    "django-htmx>=1.21.0",
]

# =============================================================================
# OPTIONAL DEPENDENCIES
# =============================================================================
[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "flake8>=7.3.0",
    "flake8-django>=1.4",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.19.1",
    "django-stubs>=5.2.8",
    "pre-commit>=4.5.1",
    "djlint>=1.36.4",
    "ruff>=0.9.0",
    "django-debug-toolbar>=6.1.0",
    "django-redis>=6.0.0",
]

test = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "factory-boy>=3.3.3",
    "faker>=40.1.0",
    "playwright>=1.56.0",
]

security = [
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "pip-audit>=2.7.0",
]

prod = [
    "dj-database-url>=3.1.0",
    "django-storages>=1.14.4",
    "boto3>=1.35.0",
]

all = [
    "portfolio-site[dev,test,security,prod]",
]

[project.urls]
Homepage = "https://github.com/waldseelen/PORTFOLIO-SITE"
Documentation = "https://github.com/waldseelen/PORTFOLIO-SITE#readme"
Repository = "https://github.com/waldseelen/PORTFOLIO-SITE.git"
Issues = "https://github.com/waldseelen/PORTFOLIO-SITE/issues"

# =============================================================================
# BUILD SYSTEM (uv)
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "project"]

# =============================================================================
# UV - Modern Python Package Manager
# =============================================================================
[tool.uv]
dev-dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "ruff>=0.9.0",
    "mypy>=1.19.1",
    "django-stubs>=5.2.8",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "factory-boy>=3.3.3",
    "faker>=40.1.0",
]

# =============================================================================
# RUFF - Ultra-Fast Python Linter (flake8/isort replacement)
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "*/migrations/*",
    ".venv",
    "venv",
    "node_modules",
    "staticfiles",
    "build",
    "dist",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
    "S",      # flake8-bandit (security)
    "T10",    # flake8-debugger
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by formatter)
    "W503",   # line break before binary operator
    "S101",   # assert used (standard in tests)
    "S104",   # hardcoded bind (intentional for dev)
    "S105",   # hardcoded password (false positives)
    "S106",   # hardcoded password funcarg
    "S311",   # random (non-crypto context)
    "S324",   # hashlib (cache keys only)
    "DJ001",  # null=True on string field (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings/*.py" = ["F405", "F401", "F403"]
"*/settings/*.py" = ["F405", "F401", "F403", "E402"]
"tests/*.py" = ["F401", "F811", "S101", "S105", "S106"]
"scripts/*.py" = ["E402", "S602", "S603", "S607"]
"manage.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "project"]
known-third-party = ["django", "rest_framework", "celery"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

# =============================================================================
# BLACK - Code Formatter
# =============================================================================
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | staticfiles
  | __pycache__
)/
'''

# =============================================================================
# ISORT - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = ["django"]
known_first_party = ["apps", "project"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "venv", ".venv", "node_modules", "staticfiles"]

# =============================================================================
# MYPY - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
explicit_package_bases = true
namespace_packages = true
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "node_modules/",
    "staticfiles/",
    "build/",
    "dist/",
]

[tool.django-stubs]
django_settings_module = "project.settings.simple"

[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "celery.*",
    "redis.*",
    "channels.*",
    "pywebpush.*",
    "pyotp.*",
    "qrcode.*",
    "bleach.*",
    "markdown.*",
    "meilisearch.*",
    "factory.*",
    "faker.*",
    "pytest.*",
    "waffle.*",
    "django_htmx.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Testing Framework
# =============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings.simple"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests/", "apps/"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "--reuse-db",
    "--nomigrations",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests for individual functions/methods",
    "integration: Integration tests for multiple components",
    "e2e: End-to-end user workflow tests",
    "ui: UI/UX component tests",
    "visual: Visual regression tests",
    "responsive: Responsive design tests",
    "accessibility: Accessibility feature tests",
    "theme: Theme switching and dark mode tests",
    "animation: Animation and interaction tests",
    "slow: Tests that take longer than usual",
    "api: API endpoint tests",
    "htmx: HTMX interaction tests",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango51Warning",
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["apps"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/staticfiles/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]
show_missing = true
precision = 2

# =============================================================================
# BANDIT - Security Linter
# =============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    "venv",
    ".venv",
    "node_modules",
    "staticfiles",
]
skips = [
    "B101",  # assert_used
    "B104",  # hardcoded_bind_all_interfaces
    "B105",  # hardcoded_password_string
    "B106",  # hardcoded_password_funcarg
    "B107",  # hardcoded_password_default
    "B108",  # hardcoded_tmp_directory
    "B110",  # try_except_pass
    "B311",  # random
    "B324",  # hashlib (MD5 for cache)
]

# =============================================================================
# DJLINT - Django Template Linter
# =============================================================================
[tool.djlint]
profile = "django"
indent = 4
max_line_length = 120
max_attribute_length = 80
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H,T,D"
exclude = ".venv,venv,node_modules,staticfiles"
